# jarujaru-island-video-gacha

./: .gitignore  Makefile  README.md  pyproject.toml
backend/api/: Dockerfile  main.py
backend/batch/: Dockerfile  api_client.py  main.py
backend/db/: client.py
backend/templates/: results.html
frontend/: index.html
terraform/: .terraform.lock.hcl  apigateway.tf  cloudfront.tf  ecr.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf  waf.tf
